Add gateway user delete endpoint
