# services/api/internal/services/gateway/routes.go
@@ -10,4 +10,5 @@ func Routes(e *echo.Group) {
 	g.POST("/users", ctl.CreateUser)
 	g.GET("/users/:username/status", ctl.UserStatus)
 	g.PATCH("/users/:username/subscription", ctl.UpdateUserSubscription)
+	g.DELETE("/users/:username", ctl.DeleteUser)
 }
